--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 <p>Other resources related to the document. The HTML element specifies relationships between the current document and an external resource. Possible uses for this element include defining a relational framework for navigation. This Element is most used to
 link to style sheets.</p>
 <ul>
-    <li>rel: specifies the relationship between the current document and the linked document</li>
+    <li>href: specifies the relationship between the current document and the linked document</li>
   </ul>
 <p>
   &lt;a href="url">link text /a&gt;  
